# TomatoPromoterDesigner

./: .gitignore  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  RESOURCE_LICENSES.md  pyproject.toml
app/optional_web_demo/: README.md
configs/: training_mpravae.yaml
data/: README.md  inventory.tsv  source_registry.tsv  summary.json
data/results/demo/: README.md  (+4 more)
docs/: application_note_references.bib  application_note_submission.tex  application_note_supplement.tex  application_note_text_blocks.md  bioinformatics_application_note.md  data_inventory.md  data_provenance.md  figure_inventory.md  installation.md  legacy_mapping.md  methods.md  migration_inventory.md  quickstart.md  release_checklist.md  reproducibility.md  supplementary_materials_outline.md  tool_documentation.md  training.md
examples/: demo_input.fasta  expected_output.csv
examples/notebook/: README.md
models/: README.md  weights_manifest.json
models/deepseed/: 165_mpra_expr_denselstm.pth  SeqRegressionModel.py
scripts/: render_FigS1_quantitative_reference.R  render_FigS2_expression_heatmap.R  render_FigS3_dnabert_motif_summary.R  render_FigS4_kmer_distribution.R  render_FigS5_design_candidate_summary.R  reproduce_legacy_outputs.py  sync_repository_data.py  train_mpravae.py
src/tomato_promoter_designer/: __init__.py  cli.py  config.py  resources.py
tests/: test_blast_png.py  test_cli.py  test_dnabert_legacy.py  test_figures.py  test_io.py  test_legacy.py  test_legacy_figures.py  test_mpravae_legacy.py  test_pipeline.py  test_report.py
tests/data/: demo_input.fasta
(+67 files in other folders)
